syntax = "proto3";

package roles;

service RoleService {
    rpc CreateRole(CreateRoleRequest) returns (CreateRoleResponse) {}
    rpc RoleDetails(RoleDetailsRequest) returns (RoleDetailsResponse) {}
}

message CreateRoleRequest {
    string name = 1;
    string description = 2;
    repeated string permissions = 3;
}

message CreateRoleResponse {
    int32 status = 1;
    repeated string error = 2; 
    string id = 3;
}

message RoleDetailsRequest {
    string id = 1;
}

message RoleDetailsResponse {
    int32 status = 1;
    repeated string error = 2; 
    string id = 3;
    string name = 4;
    string description = 5;
    string createdAt = 6;
    repeated string permissions = 7;
}